# 0.00.20 (63446) Apr 16, 2012
4/16/12 Deploying to dev to enable the design team to review some changes.
Changed the biomolecule tool box such that it leaves a faded version of the biomolecule behind as a sort of legend.
Fixed an issue where the biomolecules could end up moving outside of their motion bounds when attaching to a base pair on the DNA molecule.
# 0.00.19 (62767) Mar 23, 2012
3/23/12 Deploying to dev for review
Made changes to motion strategies and bounds in order to make the rate of transcription a little higher on the 2nd tab.
Changed the way that polymerase is recycled such that it can be relocated either above or below the DNA when returned to the beginning of the transcribed region.
Changed the motion bounds on both the 1st and 2nd tabs so that molecules are allowed to move below the DNA.
Fixed layout for HorizontalSliderWithLabelAtEnds, see #3255
Rewrote HSliderNode to use VSliderNode as a composite, see #3255
Added code to move biomolecules that attach to the DNA to a lower "layer" of the scene graph so that they are always behind other biomolecules.  This prevents odd-looking cases where biomolecules appear to move between the DNA and a molecule that is attached to it.
Made the polymerase be "recycled" on the 2nd tab, so that it fades out when it finishes transcribing, then reappears in a good position to transcribe again.
Constrained z-direction of biomolecules when near the DNA so that they always appear to be fully opaque when interacting with the DNA.
Made mRNA fade out on 2nd tab when it is fully formed, since it is never translated.
Increased speed of transcription by polymerase on the DNA strand.
Turned off the feature where the first tab started zoomed out.
# 0.00.18 (62503) Mar 13, 2012
3/13/12 Deploying snapshot to dev for review and discussion.